fix: public schema route db
